Updated the css to ensure that the search terms overlap the search results instead of stacking the search terms on top of the search results

--- a/app/styles/_search.less
+++ b/app/styles/_search.less
@@ -4,6 +4,12 @@
   min-height: 480px;
 }
 
+.tab-view {
+  position: absolute;
+  top: 140px;
+  width: 97%;
+}
+
 .search-result {
   padding: 5px;
   padding-left: 8px;
