--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -8,6 +8,10 @@ body {
     margin-bottom: 50px;
 }
 
+.container {
+    position: relative;
+}
+
 .navbar {
     margin-bottom: 20px;
 }
